[package]
name = "era_revm"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = { version = "3.5.0" }
era_test_node = { git = "https://github.com/matter-labs/era-test-node.git", rev = "a41a33464aadc7735f56071ca9a968659bb39117" }
zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "fcf8d89b98012d3972d00e991ad4e55edf4848f6" }
zk_evm = { git = "https://github.com/matter-labs/era-zk_evm.git", tag = "v1.3.3-rc1"}
tokio = { version = "1", features = ["time", "rt"] }

ethabi = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
eyre = "0.6"
tracing = { version = "0.1.26", features = ["log"] }
ethers = { version = "2.0.4", features = ["rustls"] }
hashbrown = { version = "0.14" }

[dev-dependencies]
maplit = "1.0.2"
